add skeleton to shipment details

--- a/src/locales/ar/shipmentTracking.json
+++ b/src/locales/ar/shipmentTracking.json
@@ -25,5 +25,7 @@
     "onHold": "في الانتظار",
     "delivered": "تم تسليم الأوردر",
     "returned": ""
-  }
+  },
+  "problemWithYourShipment": "هل يوجد مشكلة فى شحنتك ؟!",
+  "reportAProblem": "إبلاغ عن مشكلة"
 }
