--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -8,7 +8,7 @@
       "en": "EN",
       "ar": "AR"
     },
-    "trakShipment": "Trak shipment",
+    "trakShipment": "Track shipment",
     "TrackYourShipment": "Track your shipment",
     "trackNo": "Track.No"
   },
